# nft-firewall-public

./: .gitignore  AI_CONTEXT.md  CHANGELOG.md  Makefile  README.md  install.sh  pyproject.toml  setup.py  setup.sh
config/: firewall.ini.example
docs/: INSTALLER_VALIDATION_WORKSHEET.md  LOCAL_CHANGE_TRACKING.md  MIGRATION_ZERO_DOWNTIME.md
scripts/: backup_firewall.sh  core-hardening.sh  dev-check.sh  fix-keybase-wrapper.sh  fw  nft-check-ruleset.sh  safe-nft-apply.sh  uninstall.sh
src/: main.py
src/core/: profiles.py  rules.py  state.py
src/daemons/: knockd.py  listener.py  ssh_alert.py  watchdog.py  webui.py
src/integrations/: docker.py  geoblock.py  threatfeed.py
src/utils/: analytics.py  formatter.py  keybase.py  metrics.py  report_image.py  validation.py
systemd/: nft-daily-report.service  nft-daily-report.timer  nft-firewall-doctor.service  nft-firewall-doctor.timer  nft-firewall-threatfeed.service  nft-firewall-threatfeed.timer  nft-knockd.service  nft-listener.service  nft-metrics.service  nft-metrics.timer  nft-ssh-alert.service  nft-threat-update.service  nft-threat-update.timer  nft-watchdog.service  nft-webui.service
tests/: chaos_test.sh  test-in-docker.sh
tests/unit/: conftest.py  test_analytics_counters.py  test_atomic_markers.py  test_block_validation.py  test_cosmos_secure.py  test_debug_features.py  test_docker_networks.py  test_doctor.py  test_dynamic_sets.py  test_formatter.py  test_fw_wrapper.py  test_generated_privileged_wrappers.py  test_geoblock.py  test_integration_smoke.py  test_keybase.py  test_listener.py  test_metrics.py  (+14 more)
(+2 files in other folders)
