[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nft-firewall"
version = "0.0.0+deployed"
description = "Secure nftables firewall with WireGuard killswitch and Docker isolation"
readme = "AI_CONTEXT.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.10",
]
test = [
  "pytest>=8",
  "pytest-cov>=5",
  "hypothesis>=6",
]
keybase = []

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.coverage.run]
source = ["src/core"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["F821", "F822", "F823"]
ignore = ["E501"]
